guard against NPE in the ExtensionsUtil class